# asabru-commons

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci-cmake_tests.yml
src/: BaseComputationCommand.h  CMakeLists.txt  CommandDispatcher.h  CommonTypes.h  ComputationContext.cpp  ComputationContext.h  LineGrabber.h  ProtocolHelper.cpp  ProtocolHelper.h  TypeFactory.cpp  TypeFactory.h  Utils.h
src/afcas/: AfcasClient.cpp  AfcasClient.h  Operation.h
src/authentication/: AuthenticationFactory.h  AuthenticationStrategy.h  BasicAuthenticationStrategy.h  CachedFileList.h  MemoryMappedListFile.h
src/authorization/: AfcasAuthorizationStrategy.h  AuthorizationFactory.h  AuthorizationStrategy.h  BaseAuthorizationStrategy.h  Group.h  Principal.h  Resource.h  ResourceAccessPredicate.h
src/config/: IConfigEngine.h  config_types.h
src/file_transfer/: Payload.cpp  Payload.h
src/http/: http_message.cpp  http_message.h  uri.h
src/load_balancer/: LoadBalancer.h  RandomStrategy.h  RoundRobinStrategy.h  WeightedRoundRobinStrategy.h  main.cpp
src/logger/: Logger.h
src/logger/content-writer/: DbContentWriter.h  NetworkContentWriter.h
src/logger/strategy/: FileLogStrategy.h  LogStrategy.h  NetLogStrategy.h
src/logger/util/: TcpClient.h
src/multipart_parser/: multipart_parser.cpp
src/thread_pool/: thread_pool.cpp  thread_pool.h
src/util/: PythonInterpreter.cpp  PythonInterpreter.h  ThreadPoolSingleton.h  libnameothy.h  network_utils.h
src/uuid/: UuidGenerator.h
test/: CMakeLists.txt  Utils_test.cpp
